--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "toastr": "~2.0.1",
     "angular": "~1.2.15",
     "angular-resource": "~1.2.15",
-    "angular-route": "~1.2.15"
+    "angular-route": "~1.2.15",
+    "angular-bootstrap": "~0.10.0"
   }
 }
