--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.2.15",
     "angular-resource": "~1.2.15",
     "angular-route": "~1.2.15",
-    "angular-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0",
+    "bootstrap": "~3.1.1"
   }
 }
