--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "engines": {
     "node": "0.10.x",
-    "npm": "1.3.x"
+    "npm": "1.4.x"
   },
   "repository": {
     "type": "git",
@@ -28,9 +28,11 @@
   "author": "Bryan Garzon Bahamon (@garbray)",
   "license": "MIT",
   "dependencies": {
-    "jade": "~1.3.0",
-    "express": "~3.5.1",
-    "stylus": "~0.42.3",
-    "mongoose": "~3.8.8"
+    "body-parser": "^1.9.2",
+    "express": "^3.5.3",
+    "jade": "^1.3.1",
+    "mongoose": "~3.8.8",
+    "morgan": "^1.5.0",
+    "stylus": "~0.42.3"
   }
 }
